# selen

./: .gitignore  CHANGELOG.md  CURRENT_STATUS.md  Cargo.toml  ENHANCED_SYNTAX_COMPLETE.md  FLOAT_LINEAR_IMPLEMENTATION_SUMMARY.md  LICENSE  MISSING_CONSTRAINTS.md  PRODUCTION_READINESS_PLAN.md  README.md  SELEN_MISSING_FEATURES.md  SELEN_MISSING_FEATURES_REVIEW.md  SUM_BENCHMARK_BASELINE.md  TYPE_CONVERSION_COMPLETE_SUMMARY.md  analyze_puzzle_difference  comment_passing_tests.sh  comment_remaining_batches.sh  debug_ulp  debug_ulp.rs  debug_ulp2  debug_ulp2.rs  debug_utils.rs  show_failures_only.sh  split_neq_concept.rs  test_bitset_u128.rs  test_enhanced_neq.rs  test_float_neq.rs  test_mixed_types.rs  test_neq.rs  test_neq_comparison.rs  test_panic_free_demo.rs  test_simple_neq.rs  test_trait_dispatch.rs  test_ulp_comparison.rs  utilstests  utilstests.rs
benchmarks/: README.md  bitset_focused_benchmark.rs  bitset_gac_analysis.rs  extreme_17_clue_benchmark.rs  gac_comparison.rs  mod.rs  performance_validation.rs  platinum_blonde_benchmark.rs  platinum_gac_benchmark.rs  runtime_api_performance_benchmarks.rs  runtime_api_performance_best_practices.rs  runtime_api_performance_regression.rs  runtime_api_performance_simple.rs  solver_vs_gac_comparison.rs  step_2_4_benchmark  step_2_4_performance_benchmarks.rs  sudoku_hybrid_gac.rs  sum_constraint_benchmark.rs
coverage/: CODE_COVERAGE.md  bnf_gap_analysis.md  complete_constraint_analysis.md  complex_initialization_fix_report.md  constraint_coverage_report.md  constraints_coverage_22_09_2025.txt  constraints_coverage_after_revert.html  constraints_coverage_improvement_report.md  full_test_suite_results.md  new_constraints_implementation_report.md  parameter_array_fix_report.md  phase3_method_coverage.md  sort_constraint_implementation.md
debug/: README.md  clean_syntax_demo.rs  debug_classification.rs  debug_domain_creation.rs  debug_float_solve.rs  debug_hanging.rs  debug_invalid_float.rs  debug_invalid_variable.rs  debug_opt_path.rs  debug_optimization_step_2_3_2.rs  debug_simple.rs  debug_step1.rs  debug_validation_errors.rs  demo_enhanced_stats.rs  performance_investigation.rs  simple_test.rs  syntax_comparison.rs  test_enhanced_stats.rs  test_greater_than_bug.rs  test_modulo_runtime_api.rs  test_platinum_puzzle.rs  test_single_file.rs  test_view_debug.rs
debug_backup/: agprice_full.rs  agprice_refactored.rs  agprice_simple_bounded.rs  agprice_test.rs  analyze_puzzle_difference.rs  clean_syntax_demo.rs  debug_classification.rs  debug_flatzinc_simple.rs  debug_float_lin_eq.rs  debug_invalid_float.rs  debug_var_eq.rs  performance_investigation.rs  simple_test.rs  test_bounds_debug.rs  test_modulo_conservative.rs  test_modulo_debug.rs  test_modulo_debug_trace.rs  test_platinum_puzzle.rs  test_var_eq_bounds.rs
docs/: AGPRICE_ANALYSIS.md  API_STABILITY.md  Code Coverage.md  HEALTH_CHECK.md  (+31 more)
examples/misc/: Cargo.toml  README.md  boolean_logic.rs  classification_demo.rs  min_max_demo.rs  model_with_values.rs  pc_builder.rs  portfolio_optimization.rs  resource_allocation.rs  resource_cleanup_demo.rs  run_example.sh  simple_config_demo.rs  solution_with_stats_demo.rs  validate_examples.sh
(+640 files in other folders)
