[package]
name = "csp"
version = "0.3.1"
edition = "2024"
description = "CSP Solver"
rust-version = "1.88"
categories = ["algorithms", "data-structures", "mathematics", "science"]
keywords = ["constraint-satisfaction-problem", "constraint-solver", "constraint-propagation"]
license = "MIT"
repository = "https://github.com/radevgit/cspsolver"
readme = "README.md"

[dependencies]

[lib]
crate-type = ["lib"]

[dev-dependencies]
rand = "0.9.2"
divan = "0.1.21"
