[package]
name = "cspsolver-misc-examples"
version = "0.1.0"
edition = "2021"
description = "Miscellaneous examples for the CSP solver library"

# This is a standalone package, not part of the workspace
[workspace]

[dependencies]
cspsolver = { path = "../../" }

# Define all examples as separate binaries
[[bin]]
name = "api_evolution_demo"
path = "api_evolution_demo.rs"

[[bin]]
name = "bool_logic_demo"
path = "bool_logic_demo.rs"

[[bin]]
name = "boolean_logic"
path = "boolean_logic.rs"

[[bin]]
name = "classification_demo"
path = "classification_demo.rs"

[[bin]]
name = "clean_api_demo"
path = "clean_api_demo.rs"

[[bin]]
name = "comprehensive_constraints"
path = "comprehensive_constraints.rs"

[[bin]]
name = "error_handling_demo"
path = "error_handling_demo.rs"

[[bin]]
name = "min_max_demo"
path = "min_max_demo.rs"

[[bin]]
name = "model_with_values"
path = "model_with_values.rs"

[[bin]]
name = "multiplication_demo"
path = "multiplication_demo.rs"

[[bin]]
name = "pc_builder"
path = "pc_builder.rs"

[[bin]]
name = "portfolio_optimization"
path = "portfolio_optimization.rs"

[[bin]]
name = "precision_config"
path = "precision_config.rs"

[[bin]]
name = "resource_allocation"
path = "resource_allocation.rs"

[[bin]]
name = "resource_cleanup_demo"
path = "resource_cleanup_demo.rs"

[[bin]]
name = "simple_config_demo"
path = "simple_config_demo.rs"

[[bin]]
name = "simple_memory_monitoring_demo"
path = "simple_memory_monitoring_demo.rs"

[[bin]]
name = "solution_with_stats_demo"
path = "solution_with_stats_demo.rs"

[[bin]]
name = "ultra_clean_api_demo"
path = "ultra_clean_api_demo.rs"